--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,9 @@
     "react-dom": "^15.6.2",
     "react-router": "^3.2.6",
     "style-loader": "^0.23.1",
-    "webpack": "^1.15.0",
-    "webpack-dev-server": "^1.16.5"
+    "webpack": "^1.15.0"
+  },
+  "dependencies": {
+    "webpack-dev-server": "^3.11.0"
   }
 }
