--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,9 +27,8 @@
     "react-dom": "^15.6.2",
     "react-router": "^3.2.6",
     "style-loader": "^0.23.1",
-    "webpack": "^1.15.0"
+    "webpack": "^1.15.0",
+    "webpack-dev-server": "^1.16.5"
   },
-  "dependencies": {
-    "webpack-dev-server": "^3.11.0"
-  }
+  "dependencies": {}
 }
